Tests/RunCMake/CMakePresets/NoPresetName-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/NoPresetName:
Error: @4,5: Missing required field "name" in Preset
    {
    \^$
